--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <h1>Select a Class</h1>
+    <h3 id="selected-class">No Class Selected</h3>
+    <div id="char">
+        <img alt="character" id="char-img" class="hidden"/>
+        <h4 id= "char-name" class="hidden"></h4>
+    </div>
     <select id="class-select" name="">
     </select>
 
