--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="char">
         <img alt="character" id="char-img" class="hidden"/>
         <h4 id= "char-name" class="hidden"></h4>
+        <ul id="proficiencies-list" class="hidden"></ul>
     </div>
     <select id="class-select" name="">
     </select>
