added spell list

--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 <body>
     <h1>Select a Class</h1>
     <h3 id="selected-class">No Class Selected</h3>
+    <select id="class-select" name="">
+    </select>
     <div id="char">
         <img alt="character" id="char-img" class="hidden"/>
         <h4 id= "char-name" class="hidden"></h4>
+        <h4 id="proficiencies-header" class="hidden">Proficiencies</h4>
         <ul id="proficiencies-list" class="hidden"></ul>
+        <h4 id="spell-header" class="hidden">Spells</h4>
+        <ul id="spell-list" class="hidden"></ul>
     </div>
-    <select id="class-select" name="">
-    </select>
 
 </body>
 </html>
